# copilot-memory-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: publish.yml
app/: embeddings.py  main.py  memory_store.py
app/tools/: create_memory.py  delete_memory.py  list_memories.py  search_memories.py  update_memory.py
docs/registry/: server.yaml
examples/: .cursorrules  AGENTS.md  CLAUDE.md
examples/.cursor/rules/: memory-tools.mdc
examples/.github/: copilot-instructions.md
examples/.github/agents/: memory.md
examples/.github/prompts/: recall-memory.prompt.md  save-memory.prompt.md
examples/vscode/: mcp.json
tests/: test_memory_store.py  test_tools.py
